# clever-prover

./: .gitignore  LICENSE  README.md  copra_bug.out  main.ipynb  prev_error.out  pyproject.toml  requirements.txt  requirements_itp_interface.txt  setup.sh  temp.py
data/: harmonic_find_test_1.csv  harmonic_find_test_28.csv  harmonic_test_find_1.csv  harmonic_test_find_1.json  harmonic_test_find_28.csv  harmonic_test_find_hard_10.json  harmonic_test_find_prove_2.csv  harmonic_test_find_prove_2.json  harmonic_test_find_prove_45.csv  harmonic_test_find_prove_45.json  harmonic_test_insert_4.json  harmonic_test_prove_1.csv  harmonic_test_prove_17.csv  harmonic_test_prove_1_easy.csv  harmonic_test_prove_1_easy.json  kaggle_train_1.csv  kaggle_train_1_x_20_temp.csv  problem_2_1.json  problem_3_1.json  random_problems_10.json  simple_find_1.json  simple_problems_2.json  temp_json.json  temp_json2.json  valid.csv
data/old/: AIME_1983_2024.csv  harmonic_test_48.json  harmonic_test_find_28.json  harmonic_test_missed_6.json  harmonic_test_prove_1.json  harmonic_test_prove_17.json  simple_find_1.json
data/test/lean4_proj/: Lean4Proj.lean  lake-manifest.json  lakefile.lean
scripts/: eval.py
src/aimo_gaz/: main.py  main_parallel.py
src/aimo_gaz/configs/: code_solver_config.yaml  code_tool_config.yaml  coordination_solver_config.yaml  coordination_solver_config_cthl.yaml  coordination_solver_config_pceelmv.yaml  coordination_solver_config_pipssc.yaml  coordinator_tool_config.yaml  execution_solver_config.yaml  execution_tool_config.yaml  implementation_planner_tool_config.yaml  lean4_executor_tool_config.yaml  llm_guesser_tool_config.yaml  old_code_tool_config.yaml  old_planner_tool_config.yaml  planner_solver_config.yaml  planner_tool_config.yaml  prover_tool_config.yaml  test_solver_config.yaml  vanilla_few_shot_solver_config.yaml
src/aimo_gaz/models/: abs_model.py  comet_helper.py  gpt_access.py  gpt_model.py  llm_helper.py  model.py  old_model.py  prompt.py
src/aimo_gaz/prompters/: code_prompter.py  coder_prompter.py  coordinator_format_answer_prompter.py  coordinator_prompter.py  cot_prompter.py  implementation_planner_prompter.py  implementer_prompter.py  llm_guesser_prompter.py  old_code_prompter.py  old_planner_prompter.py  planner_prompter.py  prev_code_prompter.py  prev_coordinator_prompter.py  prev_llm_guesser_prompter.py  prev_planner_prompter.py  prompter.py  proof_planner_prompter.py  prover_format_answer_prompter.py  prover_prompter.py
src/aimo_gaz/prompts/: code_prompt.py  coder_system_prompt.txt  conjecturer_example_prompt.md  conjecturer_prompt.md  conjecturer_system_prompt.md  coordinator_prompt.py  coordinator_system_prompt.md  coordinator_system_prompt.txt  correctness_prover_example_prompt.md  correctness_prover_prompt.md  cot_prompt.py  implementer_prompt.md  (+20 more)
src/clever_prover/: main.py  main_parallel.py
(+347 files in other folders)
