[build-system]
requires = [
    "hatchling",
    "torch==2.1.1",
    "numpy==1.26.4",
    "accelerate==0.29.1",
    "bitsandbytes==0.42.0",
    "transformers==4.39.3",
    "sympy==1.12.1",
    "ray==2.4.0",
    "tqdm>=4.27",
    "hydra-core>=1.0.0",
    "omegaconf>=2.0.1",
    "rank_bm25==0.2.2",
    "parglare==0.16.1",
    "psutil==5.9.5",
    "pydantic==1.10.13",
    "typer==0.4.0",
    "urllib3>=2.0.7",
    "peft==0.11.1",
    "trl==0.9.4",
    "setuptools==69.5.1",
    "matplotlib==3.9.0",
    "dataclasses-json==0.5.7"
]
build-backend = "hatchling.build"
[project]
name = "aimo_gaz"
version = "0.0.1"
authors = [
  { name="Amitayush Thakur", email="amitayush@utexas.edu" },
  { name="George Tsoukalas", email="george.tsoukalas@utexas.edu" },
  { name="Zayne Sprague", email="zaynesprague@utexas.edu"}
]
description = "Generic interface for hooking up to any Interactive Theorem Prover (ITP) and collecting data for training ML models for AI in formal theorem proving."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
]

[project.urls]
Homepage = "https://github.com/amit9oct/aimo"
Issues = "https://github.com/amit9oct/aimo/issues"

[tool.hatch.envs.default.env-vars]
PIP_EXTRA_INDEX_URL = "https://download.pytorch.org/whl/cu121"