[build-system]
requires = [
    "hatchling"
]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/clever_prover"]

[project]
name = "clever_prover"
version = "0.0.0"
authors = [
  { name="Amitayush Thakur", email="amitayush@utexas.edu" },
  { name="George Tsoukalas", email="george.tsoukalas@utexas.edu" }
]
description = "Proving correctness of generated code using LLMs in Lean 4"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
]

dependencies = [
    "torch==2.3.0",
    "numpy==1.26.4",
    "accelerate==0.29.1",
    "bitsandbytes==0.42.0",
    "transformers==4.41.2",
    "sympy==1.12.1",
    "ray==2.36.0",
    "tqdm>=4.27",
    "hydra-core>=1.0.0",
    "omegaconf>=2.0.1",
    "rank_bm25==0.2.2",
    "parglare==0.16.1",
    "psutil==5.9.8",
    "pydantic==2.11.3",
    "typer==0.12.3",
    "urllib3>=2.0.7",
    "peft==0.11.1",
    "trl==0.9.4",
    "setuptools==69.5.1",
    "matplotlib==3.9.0",
    "dataclasses-json==0.5.7"
]

[project.urls]
Homepage = "https://github.com/trishullab/clever_prover"
Issues = "https://github.com/trishullab/clever_prover/issues"

[tool.hatch.envs.default.env-vars]
PIP_EXTRA_INDEX_URL = "https://download.pytorch.org/whl/cu121"